--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,11 @@ p > img {
   width: 80px;
 }
 
+.load-more-spinner {
+  text-align: center;
+  padding: 30px 0;
+}
+
 .gallery {
   list-style: none;
   padding: 0;
